--- a/Projects_Home.html
+++ b/Projects_Home.html
@@ -167,9 +167,9 @@ difficulty()
                                 with the random system and implementing it with user input</p>
                         </div>
                         <div class="gallery">
-                            <div><img src="/CS_Portfolio/img/Ran_num_1.png" alt=""></div>
-                            <div><img src="/CS_Portfolio/img/Ran_num_2.png" alt=""></div>
-                            <div><img src="/CS_Portfolio/img/Ran_num_3.png" alt=""></div>
+                            <div><img src="img/Ran_num_1.png" alt=""></div>
+                            <div><img src="img/Ran_num_2.png" alt=""></div>
+                            <div><img src="img/Ran_num_3.png" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -415,12 +415,12 @@ welcome()
                                 inside the array through user inputs</p>
                         </div>
                         <div class="gallery">
-                            <div><img src="/CS_Portfolio/img/array_1.png" alt=""></div>
-                            <div><img src="/CS_Portfolio/img/array_2.png" alt=""></div>
-                            <div><img src="/CS_Portfolio/img/array_3.png" alt=""></div>
-                            <div><img src="/CS_Portfolio/img/array_4.png" alt=""></div>
-                            <div><img src="/CS_Portfolio/img/array_5.png" alt=""></div>
-                            <div><img src="/CS_Portfolio/img/array_6.png" alt=""></div>
+                            <div><img src="img/array_1.png" alt=""></div>
+                            <div><img src="img/array_2.png" alt=""></div>
+                            <div><img src="img/array_3.png" alt=""></div>
+                            <div><img src="img/array_4.png" alt=""></div>
+                            <div><img src="img/array_5.png" alt=""></div>
+                            <div><img src="img/array_6.png" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -594,7 +594,7 @@ turtle.done()
                                 module which lets you draw shapes using python</p>
                         </div>
                         <div class="gallery">
-                            <div><img src="/CS_Portfolio/img/recursion_1.png" alt=""></div>
+                            <div><img src="img/recursion_1.png" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -695,7 +695,7 @@ main()
                                 module which lets you draw shapes using python</p>
                         </div>
                         <div class="gallery">
-                            <div><img src="/CS_Portfolio/img/recursion_2.png" alt=""></div>
+                            <div><img src="img/recursion_2.png" alt=""></div>
                         </div>
                     </div>
                 </div>
