--- a/Projects_Home.html
+++ b/Projects_Home.html
@@ -756,7 +756,7 @@ main()
             </section>-->
         </section>
         <!-- written -->
-        <section id="written">
+        <section id="written" class="written">
             <div class ="top-header">
                 <h1>Written Assignments</h1>
             </div>
