--- a/Projects_Home.html
+++ b/Projects_Home.html
@@ -28,7 +28,6 @@
             <a href="index.html" class="name">Portfolio</a>
             <nav>
                 <ul>
-                    <li><a href="#Home" class="active">Home</a></li>
                     <li><a href="#project">Projects</a>
                         <ul class="sub">
                             <li><a href="#Number-Guess">Number-Guess</a></li>
@@ -41,15 +40,10 @@
             </nav>
         </header>
 
-        <section id="Home">
-            <div class ="top-header">   
-                <h1>Home</h1>
-            </div>
-        </section>
         <!-- projects -->
         <section id="project">
             <div class ="top-header">
-                <h1>My Projects</h1>
+                <h1 style="margin-top: 5em;">My Projects</h1>
             </div>
             <section id="Number-Guess">
                 <h3>Number-Guessing-Game</h3>
@@ -797,6 +791,30 @@ main()
                 <div class="parts">
                     <h3>- Theoretical CS Paper</h3>
                     <a href="https://docs.google.com/document/d/1MI8XLtdVqrTpCvb0EMUQFgoOLSCCtZEayf9ug-gSSX0/edit?tab=t.0" target="_blank">
+                        <button type="button" class="doc">Check Document</button>
+                    </a>
+                </div>
+            </div>
+            <div class = "button-container">   
+                <div class="parts">
+                    <h3>- Sorting Algorithm</h3>
+                    <a href="https://docs.google.com/document/d/1TW1nCiiVxcLbgT2k3mQWlLMOkHw5k_TbeRoSrtd3GFU/edit?tab=t.0" target="_blank">
+                        <button type="button" class="doc">Check Document</button>
+                    </a>
+                    <a href="https://docs.google.com/document/d/1NqZ9Cn--yPwDXeJ93hGeTaw1bt6thiLjWVglHXZuwY8/edit?tab=t.0" target="_blank">
+                        <button type="button" class="doc">Check Document</button>
+                    </a>
+                </div>
+                <div class="parts">
+                    <h3>- SDLC Notes</h3>
+                    <a href="https://docs.google.com/document/d/17wFclA0FP_VCrSRZanTHPKH7O88I7Lv7rj4a24dbszk/edit?tab=t.0" target="_blank">
+                        <button type="button" class="doc">Check Document</button>
+                    </a>
+                </div>
+                
+                <div class="parts">
+                    <h3>- Personal Ethics</h3>
+                    <a href="https://docs.google.com/document/d/1PG5Nu12Qn9RsL2w_NVK6rFwpFo3KkFx5XHwdKalDMho/edit?tab=t.0#heading=h.v4y244oaegna" target="_blank">
                         <button type="button" class="doc">Check Document</button>
                     </a>
                 </div>
